# dapps

./: .gitignore  .gitpod.yml  Cargo.toml  Codespace in Github.json  LICENSE  README.md  rooms.module.scss
contracts/: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  rustfmt.toml
contracts/.cargo/: config.toml
contracts/auto-changed-nft/: .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/auto-changed-nft/io/: Cargo.toml
contracts/auto-changed-nft/src/: contract.rs  lib.rs
contracts/auto-changed-nft/state/: Cargo.toml  build.rs
contracts/auto-changed-nft/tests/: nft_tests.rs  node_tests.rs  test.rs  utils.rs
contracts/battle/: Cargo.toml  README.md  build.rs
contracts/battle/app/: Cargo.toml
contracts/battle/client/: Cargo.toml  build.rs
contracts/battle/src/: lib.rs
contracts/battle/tests/: gtest.rs
contracts/battle/warrior/: README.md
contracts/battleship/: Cargo.toml  README.md  build.rs
contracts/battleship/assets/: accounts_1k_1.txt  accounts_1k_2.txt  accounts_1k_3.txt
contracts/battleship/bot/: Cargo.toml
contracts/battleship/io/: Cargo.toml
contracts/battleship/src/: contract.rs  lib.rs  sr25519.rs
contracts/battleship/tests/: load_testing.rs  test.rs  test_bot.rs  test_bot_node.rs  test_node.rs
contracts/car-races/: Cargo.toml  README.md  build.rs
contracts/car-races-old/app/: Cargo.toml
contracts/car-races-old/car-3/: README.md
contracts/car-races/app/: Cargo.toml
contracts/car-races/assets/: accounts_pr_keys_1.txt  accounts_pr_keys_2.txt  accounts_pr_keys_3.txt
contracts/concert/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/crowdsale/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/dao/: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/dao-light/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt  rust-toolchain.toml
contracts/ddns/: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  package.json
contracts/decentralized-git/: Cargo.toml  README.md  build.rs
contracts/dex/: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
contracts/dutch-auction/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/dynamic-nft/: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
contracts/escrow/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/feeds/: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
contracts/fungible-token/: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/galactic-express/: .binpath  Cargo.toml  README.md  build.rs
contracts/game-of-chance/: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/gear-lib/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
contracts/gear-lib-ng/: Cargo.toml  Makefile  README.md
contracts/gear-lib-old/: Cargo.toml  README.md
contracts/horse-races/: Cargo.toml  README.md  build.rs
contracts/identity/: Cargo.toml  README.md  build.rs
contracts/multi-token/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/multisig-wallet/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/nft/: Cargo.toml  README.md  build.rs
contracts/nft-marketplace/: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/nft-master/: .gitpod.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
contracts/nft-pixelboard/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/non-fungible-token/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/on-chain-nft/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/oracle/: Cargo.toml  README.md  build.rs
contracts/ping/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
contracts/ping-pong/: Cargo.toml  README.md  build.rs
contracts/proxy-example/: README.md
contracts/rentable-nft/: .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt  rust-toolchain.toml
contracts/rmrk/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
contracts/rock-paper-scissors/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/roll-the-dice/: Cargo.toml  README.md  build.rs
contracts/sharded-fungible-token/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/sharded-multi-token/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/staking/: .gitignore  .metahash  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
contracts/student-nft/: CHANGELOG.md  Cargo.toml  README.md  build.rs
contracts/supply-chain/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
contracts/syndote/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  out
contracts/tamagotchi/: .binpath  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt  tmg.meta.txt
contracts/tamagotchi-battle/: .gitignore  Cargo.toml  README.md  build.rs
contracts/tequila-train/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  meta.txt
contracts/tic-tac-toe/: Cargo.toml  README.md  build.rs
contracts/upgrade-proxy/: README.md
contracts/vara-man/: .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
contracts/varatube/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
contracts/w3bstreaming/: Cargo.toml  README.md  build.rs
contracts/xtask/: Cargo.toml
contracts/zk-battleship/: README.md
contracts/zk-mental-poker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+6090 files in other folders)
