[workspace]
resolver = "2"

# Keep in the lexicographic order!
# Remove a member if it's used as a dependency in the workspace.

members = [
    "battle",
    "battle/warrior/wasm",
    "battleship",
    "car-races/car-1",
    "car-races/car-2",
    "car-races/car-3",
    "car-races",
    "concert",
    "dex",
    "dynamic-nft",
    "galactic-express",
    "multisig-wallet",
    "nft-marketplace",
    "oracle",
    "oracle/randomness",
    "ping-pong",
    "upgrade-proxy/counter",
    "upgrade-proxy/upgrade-proxy",
    "rmrk",
    "rmrk/catalog",
    "rmrk/resource",
    "rmrk/state",
    "staking",
    "syndote/wasm",
    "syndote/player/wasm",
    "tamagotchi",
    "tamagotchi/state",
    "tamagotchi-battle",
    "tamagotchi-battle/state",
    "tequila-train",
    "varatube",
    "tic-tac-toe",
    "vara-man",
    "w3bstreaming",
    "zk-battleship/wasm",
]

[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
documentation = "https://dapps.gear.rs"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
# Local contracts
# Keep in the lexicographic order!

battleship-bot.path = "battleship/bot"
rmrk-catalog.path = "rmrk/catalog"
tamagotchi.path = "tamagotchi"

# Local states
# Keep in the lexicographic order!

rmrk-state.path = "rmrk/state"
tamagotchi-battle-state.path = "tamagotchi-battle/state"

# Local IO-crates
# Keep in the lexicographic order!

battleship-io.path = "battleship/io"
rmrk-catalog-io.path = "rmrk/catalog/io"
rmrk-io.path = "rmrk/io"
rmrk-resource-io.path = "rmrk/resource/io"
tamagotchi-io.path = "tamagotchi/io"
tamagotchi-battle-io.path = "tamagotchi-battle/io"
tequila-train-io.path = "tequila-train/io"

# Local libraries
# Keep in the lexicographic order!

rmrk-types.path = "rmrk/types"

# Gear

gstd = "1.7.0"
gear-wasm-builder = "1.7.0"
gmeta = "1.7.0"
gclient = "1.7.0"
gtest = "1.6.1"
gear-core = "1.7.0"
sails-idl-gen = "0.7.1"
sails-rs = "0.7.1"
sails-client-gen = "0.7.1"
session-service = { git = "https://github.com/gear-foundation/signless-gasless-session-service.git" }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vnft-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vmt-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vmt = { git = "https://github.com/gear-foundation/standards/"}
extended-vft = { git = "https://github.com/gear-foundation/standards/"}
extended-vnft = { git = "https://github.com/gear-foundation/standards/"}

# External

primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "21.0.0", default-features = false, features = ["full_crypto", "sp-externalities"] }
sp-core-hashing = { version = "10", default-features = false }
tokio = "1"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
quote = "1"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
