[package]
name = "auto-changed-nft"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace.package]
version = "0.1.2"
authors = ["Gear Technologies"]
edition = "2021"
license = "MIT"

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
auto-changed-nft-io.workspace = true
gear-lib.workspace = true
gear-lib-derive.workspace = true
sp-core-hashing.workspace = true
hashbrown.workspace = true
gmeta.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
auto-changed-nft-io.workspace = true
gmeta.workspace = true

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-lib-derive = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.9" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.9" }
primitive-types = { version = "0.12", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
auto-changed-nft-io.path = "io"
sp-core-hashing = { version = "8", default-features = false }
tokio = "1"
hashbrown = "0.14"

[workspace]
members = ["state"]

[features]
binary-vendor = []
