[package]
name = "auto-changed-nft"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
auto-changed-nft-io.workspace = true
gear-lib-old.workspace = true
gear-lib-derive.workspace = true
sp-core-hashing.workspace = true
hashbrown.workspace = true
gmeta.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
auto-changed-nft-io.workspace = true
