[package]
name = "battleship"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
battleship-io.workspace = true
schnorrkel.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gear-core.workspace = true
gclient.workspace = true
tokio.workspace = true
hex.workspace = true
rand.workspace = true
sp-core = "31.0.0"
# External binaries

battleship-bot.workspace = true

[build-dependencies]
battleship-io.workspace = true
gear-wasm-builder.workspace = true
