[package]
name = "car-races"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd = { workspace = true}
car-races-io = { path = "io" }
primitive-types.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
car-races-io = { path = "io" }

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
hex.workspace = true
gear-core.workspace = true
car-1 = { path = "car-1" }
car-2 = { path = "car-2" }
car-3 = { path = "car-3" }
