[package]
name = "concert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
multi-token-io.workspace = true
gear-lib.workspace = true
hashbrown = "0.13"
concert-io = { path = "io" }

[dev-dependencies]
concert-state = { workspace = true, features = ["binary-vendor"] }
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
multi-token.workspace = true

[build-dependencies]
concert-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true

[features]
binary-vendor = []

[workspace]
members = ["state"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
multi-token = { git = "https://github.com/gear-dapps/multitoken", branch = "update-deps" }
multi-token-io = { git = "https://github.com/gear-dapps/multitoken", branch = "update-deps" }
concert-state = { path = "state" }
concert-io = { path = "io" }
tokio = "1"
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", branch = "update-deps" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
