[package]
name = "concert"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
multi-token-io.workspace = true
concert-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# External binaries

multi-token.workspace = true

[build-dependencies]
concert-io.workspace = true
gear-wasm-builder.workspace = true
