[package]
name = "concert"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
concert-app = { path = "app" }

[build-dependencies]
concert-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true
extended-vmt.workspace = true

[dev-dependencies]
concert = { path = ".", features = ["wasm-binary"] }
concert-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
extended-vmt-client.workspace = true

[features]
wasm-binary = []
