[package]
name = "dao-light"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
dao-light-io.workspace = true
fungible-token-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true

# External binaries

fungible-token.workspace = true

[build-dependencies]
dao-light-io.workspace = true
gear-wasm-builder.workspace = true
