[package]
name = "dao"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sharded-fungible-token-io.workspace = true
gstd.workspace = true
dao-io.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
blake2-rfc.workspace = true

# External binaries

sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true

[build-dependencies]
dao-io.workspace = true
gear-wasm-builder.workspace = true
