[workspace]
resolver = "2"
members = [
  "dns",
  "dns/state",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
dns-io.path = "dns/io"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
