[package]
name = "dex"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dex-factory-io.workspace = true
gstd.workspace = true
dex-io.workspace = true
gear-lib.workspace = true
sharded-fungible-token-io.workspace = true
primitive-types.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
gstd = { workspace = true, features = ["debug"] }
gear-core.workspace = true
sp-core-hashing.workspace = true
tokio.workspace = true

# External binaries

dex-factory.workspace = true
dex-state.workspace = true
dex-factory-state.workspace = true
sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
dex-io.workspace = true
